--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ p{
     height: 20%;
     background-size: cover;
     position: absolute;
+    padding-bottom: 50px;
     
 }
 .inquiry{
@@ -111,18 +112,20 @@ font-size: 20px;
 .text{
     text-align: left;
     padding-left: 60px;
+    margin-top: 30px;
     
 }
 .clear{
     clear: both;
 }
 .te{text-decoration: none;
-    background-color: rgb(118, 46, 212);
+    background-color: rgb(18, 228, 98);
     padding: 2%;
     border-radius: 10px;
     color: rgb(235, 232, 227);
     font-weight: 550;
-    text-align: end;
+    text-align: justify;
+    margin-left: 500px;
 
     
 
